# smol-jobscout

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
data/: sample_jobs.jsonl
deploy/: Dockerfile  jobscout-ui.service
docs/: ARCHITECTURE.md  LESSONS_LEARNED.md  eval_results.md  eval_results_7b.md
docs/diagrams/: architecture.dot  future_directions.dot  how_it_works.dot  howto.dot  lessons_learned.dot
scripts/: eval.py  ingest_crawler.py
src/smol_jobscout/: __init__.py  agent.py  cli.py  config.py  data.py  model.py  obs.py  tools.py  ui.py
tests/: test_config.py  test_data.py  test_eval.py  test_ingest.py  test_smoke_agent.py  test_tools.py
